fixed white space under footer and gallery alignment

--- a/style-tablet-desktop.css
+++ b/style-tablet-desktop.css
@@ -18,7 +18,7 @@
 
   .block {
     text-align: left;
-    padding-left: 165px;
+    padding: 0 150px;
   }
 
   .header {
@@ -51,7 +51,8 @@
   }
 
   .profile-pic {
-    width: 20%;
+    width: 25%;
+    min-width: 180px;
     height: max-content;
   }
 
@@ -63,10 +64,6 @@
   .block-description {
     text-align: left;
     width: 30%;
-  }
-
-  .gallery {
-    flex-basis: 60%;
   }
 
   .block-subtitle {
@@ -94,7 +91,6 @@
     top: 90%;
     left: 3%;
     max-width: 60px;
-    height: 80%;
   }
   .slider-buttons img {
     padding-right: 13px;
