--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@
 .content-wrapper {
   display: flex;
   flex-direction: column;
+  max-width: 1680px;
+  margin: auto;
 }
 
 .block {
@@ -137,25 +139,28 @@
 .gallery {
   display: flex;
   flex-direction: row;
+  flex: 3;
+  /* padding-left: 25px; */
 }
 
 .gallery-column-1 {
   display: flex;
   flex-direction: column;
-  width: 250%;
+  flex: 3;
 }
 
 .gallery-column-2 {
   display: flex;
   flex-direction: column;
-  width: 168%;
+  flex: 2;
+  justify-content: space-between;
 }
-.card {
-  padding: 8px;
-}
+
 .card img {
   width: 100%;
+  max-width: 100%;
   height: auto;
+  padding: 10px;
 }
 
 .links-wrapper {
@@ -197,4 +202,8 @@
 
 .slider-buttons {
   display: none;
+}
+
+.slider-description {
+  flex: 1;
 }
